Updating SWPM style

--- a/app/index.html
+++ b/app/index.html
@@ -2,14 +2,14 @@
 <html>
   <head>
     <link href='http://fonts.googleapis.com/css?family=ABeeZee' rel='stylesheet' type='text/css'> <!-- Font -->
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js" type="text/javascript"></script>
-	<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/jquery-ui.min.js" type="text/javascript"></script>
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js" type="text/javascript"></script> <!-- jQuery -->
+	<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/jquery-ui.min.js" type="text/javascript"></script> <!-- jQuery UI -->
     <script type="text/javascript" src="mapscript.js"></script>
     <script type="text/javascript" src="ajaxgold.js"></script>
     <script type="text/javascript" src="excanvas.js"></script>
 	<script type="text/javascript" src="style.js"></script>
 	<script type="text/javascript" src="hideElements.js"></script>	
-    <link rel="stylesheet" type="text/css" href="mapStyle.css">
+	<link rel="stylesheet" type="text/css" href="mapStyle.css">
     <meta name="description" content="Roadway Planning Map">
     <meta name="robots" content="INDEX, FOLLOW">
     <meta name="author" content="Michael Chamberlain">
